--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             font-family: 'Arial', sans-serif;
         }
         h1 {
-            color: #333;
+            color: #11d85d9f;
         }
         canvas {
             border: 1px solid #333;
@@ -36,5 +36,6 @@
     <canvas id="game" width="400" height="400"></canvas>
     <button id="restartButton">Hrát znovu!</button>
     <script src="index.js"></script>
+    <img src="had.jpg" alt="Had">
 </body>
 </html>
