--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css"> <!-- Připojení externího CSS souboru -->
     <title>Hra Snake</title>
     <style>
         body {
@@ -15,7 +16,7 @@
             font-family: 'Arial', sans-serif;
         }
         h1 {
-            color: #11d85d9f;
+            color: #0000009f;
         }
         canvas {
             border: 1px solid #333;
@@ -36,6 +37,5 @@
     <canvas id="game" width="400" height="400"></canvas>
     <button id="restartButton">Hrát znovu!</button>
     <script src="index.js"></script>
-    <img src="had.jpg" alt="Had">
 </body>
 </html>
